[tool.poetry]
name = "liteboost"
version = "0.1.0"
description = "下一代分布式函数调度框架"
authors = ["NSCola <3135287831@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
